Header formatting changes (no longer left aligned)

--- a/catalog-css/vcis-cat.css
+++ b/catalog-css/vcis-cat.css
@@ -102,12 +102,14 @@
 /* Headings */
 #home-page #feature.feature-region #custom-feature-container h1 {
   font-size: 1.6em;
+  text-align: left;
   font-weight: 700;
   margin: 0;
 }
 
 #home-page #feature.feature-region #custom-feature-container h2 {
   font-size: 1.1em;
+  text-align: left;
   font-weight: 400;
   margin: 0.2em 0 0;
 }
